# KeyMapping

./: .gitignore  Cargo.toml  Phase 1 開發計劃.md  Phase 2 開發計劃.md  README.md  build.bat  build.gradle  build.sh  settings.gradle
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml  rust-ci.yml
app/: build.gradle
app/libs/: Modern_Xposed_API-29.aar  README.md
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/keymapping/powerkeyrules/: IRuleService.aidl
app/src/main/assets/: xposed_init
app/src/main/assets/webui/: README.md  app.js  bridge.js  index.html  style.css
app/src/main/java/com/keymapping/powerkeyrules/app/: MainActivity.kt  RuleConfigWriter.kt  RuleService.kt  WebUiActivity.kt
app/src/main/java/com/keymapping/powerkeyrules/model/: IntentSpec.kt  KeyAction.kt  KeyBehavior.kt  KeyRule.kt  RuleConfig.kt
app/src/main/java/com/keymapping/powerkeyrules/util/: Constants.kt  LogUtils.kt  RuleJson.kt  SystemContext.kt  Time.kt
app/src/main/java/com/keymapping/powerkeyrules/xposed/: ActionExecutor.kt  DefaultRules.kt  KeyRuleEngine.kt  KeyStateTracker.kt  ModernRuleStore.kt  PowerKeyHook.kt  PowerKeyModule.kt  RuleServiceClient.kt  RuleStore.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml  strings.xml
config/: config.default.yaml
module/: action.sh  module.prop  service.sh  uninstall.sh
src/: main.rs
src/cli/: main.rs
src/config/: mod.rs  parser.rs  schema.rs  validator.rs
src/event/: action.rs  mod.rs  processor.rs  state_machine.rs
src/hardware/: device.rs  mod.rs  uinput.rs
src/utils/: logger.rs
src/webui/: app_cache.rs  handlers.rs  learn.rs  mod.rs  server.rs
webroot/: README.md  app.js  changelog.md  index.html  latest.json  style.css
webroot/assets/: index-BR8Fk6d0.js  index-C7UUIazW.css
webui/: .gitignore  README.md  app.js  bridge.js  default-rules.json  index.html  package-lock.json  package.json  style.css  tailwind.config.js  vite.config.js
webui/src/: App.svelte  app.css  main.js
webui/src/components/: GlobalSettings.svelte  KeySetup.svelte  RuleEditor.svelte
