[package]
name = "rust_keymapper"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "keymapper_d"
path = "src/main.rs"

[[bin]]
name = "keymapper-cli"
path = "src/cli/main.rs"

[dependencies]
# Core
evdev = "0.12"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Async Utilities
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Data Structures
dashmap = "5.5"
indexmap = "2"
once_cell = "1.19"

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }

# Performance
rayon = "1.7"
ahash = "0.8"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
input-linux = "0.5"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
