[package]
name = "rust_keymapper"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "keymapper_d"
path = "src/main.rs"

[[bin]]
name = "keymapper-cli"
path = "src/cli/main.rs"

[dependencies]
# Core
evdev = "0.12"
tokio = { version = "1.35", features = ["full"] }

# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Async Utilities
futures = "0.3"
parking_lot = "0.12"

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
